@@ -1,5 +1,4 @@
-CFLAGS=-O2 -g -pipe -fstack-protector
-#CFLAGS=-O3 -fomit-frame-pointer
+CFLAGS=-O3 -fomit-frame-pointer
 override CFLAGS:= $(CFLAGS) -Iinclude $(shell ./check_cflags.sh $(CC) $(CFLAGS))
 
 OBJS= \
